# web-scraper

./: .env  Cargo.toml  docker-compose.yml
src/: main.rs
src/crawler/: crawl_result.rs  crawler.rs  filter.rs  mod.rs
src/db/: mod.rs  operations.rs  website.rs
