[package]
name = "crawler-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cargo.toml
tokio-console = "0.1"
console-subscriber = "0.1"
lol_html = "2.7.2"
reqwest = { version = "0.13.2", featuers = ["gzip", "brotli", "deflate", "history-dns"]}
tokio = { version = "1.50.0", features = ["full"]}
